# BlPortfolioConstruction

./: .gitignore  README.md  black_litterman_model.py  code.py  config.py  data_utils.py  fama_french_model.py  optimizer.py  portfolio_construction_BL.py  portfolio_construction_FF.py  pyproject.toml  trading_strategy.py  views.py
Figures/: .gitignore
blportopt/: black_litterman_model.py  config.py  covariance_estimator.py  data_utils.py  fama_french_model.py  optimizer.py  portfolio_construction.py  portfolio_construction_BL.py  portfolio_construction_FF.py  trading_strategy.py  views.py
notebooks/: Portfolio_Construction_FF_BL.ipynb  Portfolio_Construction_and_Optimization.ipynb
